Implemented strings-in-switch example